crates/vespertide-exporter/src/seaorm/snapshots/vespertide_exporter__seaorm__tests_edge_cases__snapshot_composite_primary_key.snap
---
source: crates/vespertide-exporter/src/seaorm/tests_edge_cases.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "membership")]
pub struct Model {
    #[sea_orm(primary_key, auto_increment = false)]
    pub tenant_id: i32,
    #[sea_orm(primary_key, auto_increment = false)]
    pub user_id: i32,
    pub role: String,
}

vespera::schema_type!(Schema from Model, name = "MembershipSchema");
impl ActiveModelBehavior for ActiveModel {}
