crates/vespertide-exporter/src/seaorm/snapshots/vespertide_exporter__seaorm__tests_edge_cases__snapshot_reserved_word_identifiers.snap
---
source: crates/vespertide-exporter/src/seaorm/tests_edge_cases.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "order")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub user: String,
    pub select: i32,
}

vespera::schema_type!(Schema from Model, name = "OrderSchema");
impl ActiveModelBehavior for ActiveModel {}
