crates/vespertide-exporter/src/seaorm/snapshots/vespertide_exporter__seaorm__tests_edge_cases__snapshot_self_referencing_fk.snap
---
source: crates/vespertide-exporter/src/seaorm/tests_edge_cases.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "employees")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub manager_id: Option<i32>,
    #[sea_orm(belongs_to, from = "manager_id", to = "id")]
    pub manager: HasOne<super::employees::Entity>,
}

vespera::schema_type!(Schema from Model, name = "EmployeesSchema");
impl ActiveModelBehavior for ActiveModel {}
